A lot happened, but a lot is gonna go
